# multiprocessor-scheduling-text

./: .gitignore
UG/: exam_tasks.txt
UG/algorithms/: algorithms.tex
UG/binary_notation/: binary_notation.tex
UG/intro_to_python/: intro_to_python.tex
UG/notations_tasks/: tasks.tex
algorithm/: algorithm.tex
code/: CMakeLists.txt  Doxyfile  README.md  main.cpp
code/converter/: converter.py
code/logging/: CMakeLists.txt  boost_logger.cpp  boost_logger.hpp
code/parser/: CMakeLists.txt  huawei_parser.cpp  huawei_parser.hpp  parser.cpp
code/schedule/: CMakeLists.txt  schedule.cpp  schedule.hpp
code/schedule_io/: CMakeLists.txt  schedule_io.cpp  schedule_io.hpp
code/time_schedule/: CMakeLists.txt  time_schedule.cpp  time_schedule.hpp
coursework/: block-schemas.tikzstyles  references.bib  thesis.tex
coursework/figures/: max_children.tikz  schedule-graph.tikz  schedule-graphical-form.tikz
coursework/pages/: 02goals.tex  03problem.tex  04review.tex  06code.tex  07experiments.tex
grad_presentation/: presentation.tex
grad_presentation/figures/: criticalness.tikz  edf.tikz  fictive_nodes.tikz  schedule-time-diagram-2.tikz  schedule-time-diagram-3.tikz  schedule-time-diagram-new-2.tikz  schedule-time-diagram-new-3.tikz  schedule-time-diagram-new.tikz
grad_presentation/slides/: 01goals.tex  02task_desc.tex  03overview.tex  04algorithm.tex  06experiments.tex  07results.tex  08bonus-slides.tex
gradwork/: final_UML.drawio  grad.tex  references.bib  thesis.tex  tikzit.sty
gradwork/figures/: edf.tikz  main-block-schema.tikz  schedule-graph.tikz  schedule-graphical-form.tikz  schedule-time-diagram-2.tikz  schedule-time-diagram-3.tikz  schedule-time-diagram-new-2.tikz  schedule-time-diagram-new-3.tikz  schedule-time-diagram-new.tikz  schedule-time-diagram.tikz
gradwork/pages/: 00titlepage.tex  01introduction.tex  (+7 more)
overview/: biblio.bib  overview.tex
presentation/: presentation.tex
spetssem/: README.md  presentation.tex
thesis/: references.bib  thesis.tex
(+40 files in other folders)
